gobmkida/g3/compute_surrounding_moyo_sizes
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/compute_surrounding_moyo_sizes/src/engine/dragon.c:2485:25: error: use of undeclared identifier 'byte_A2CADF'
v10 = ( unsigned __int8)byte_A2CADF[i]; 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/compute_surrounding_moyo_sizes/src/obj/1/dragon.o] Error 1
